--- a/3-column-card-component/index.html
+++ b/3-column-card-component/index.html
@@ -13,12 +13,11 @@
   <link rel="stylesheet" href="style.css" type="text/css" />
 
 </head>
-<body>
-  
+<body> 
   <main>
       <section id="sedans" class="size">
         <img src="images/icon-sedans.svg" alt="sedan" />
-        <h1>Sedans</h1>
+        <h1 class="title">Sedans</h1>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
           or on your next road trip.
@@ -28,7 +27,7 @@
 
       <section id="suvs" class="size">
         <img src="images/icon-suvs.svg" alt="suvs" />
-        <h1>SUVs</h1>
+        <h1 class="title">SUVs</h1>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
           and off-road adventures.
@@ -38,7 +37,7 @@
   
       <section id="luxury" class="size">
         <img src="images/icon-luxury.svg" alt="luxury" />
-        <h1>Luxury</h1>
+        <h1 class="title">Luxury</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.
