--- a/3-column-card-component/index.html
+++ b/3-column-card-component/index.html
@@ -15,39 +15,39 @@
 </head>
 <body> 
   <main>
-      <section id="sedans" class="size">
+      <section class="sedans">
         <img src="images/icon-sedans.svg" alt="sedan" />
         <h1 class="title">Sedans</h1>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
           or on your next road trip.
         </p>
-        <button id="button-sedan">Learn More</button>
+        <button class="button">Learn More</button>
       </section>
 
-      <section id="suvs" class="size">
+      <section class="suvs">
         <img src="images/icon-suvs.svg" alt="suvs" />
         <h1 class="title">SUVs</h1>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
           and off-road adventures.
         </p>
-        <button id="button-suvs">Learn More</button>
+        <button class="button">Learn More</button>
       </section>
   
-      <section id="luxury" class="size">
+      <section class="luxury">
         <img src="images/icon-luxury.svg" alt="luxury" />
         <h1 class="title">Luxury</h1>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.
         </p>
-        <button id="button-luxury">Learn More</button>
+        <button class="button">Learn More</button>
       </section>
   </main>
-  
-  <footer>
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+
+ <footer>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
 
   </footer>
 </body>
