--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -24,11 +24,11 @@
   </style>
 </head>
 <body>
-
+ 
   <main>
     <picture>
-      <source media="(min-width: 700px)" srcset="images/image-product-desktop.jpg" alt="product">
-      <img class="img" src="images/image-product-mobile.jpg" alt="product">
+      <source media="(max-width: 700px)" srcset="images/image-product-mobile.jpg" alt="product-perfume">
+      <img class="img" src="images/image-product-desktop.jpg" alt="product-perfume">
     </picture>
 
     <p class="name">perfume</p>
@@ -37,11 +37,11 @@
       A floral, solar and voluptuous interpretation composed by Olivier Polge,
       Perfumer-Creator for the House of CHANEL.
     </p>
-    <div class="price">
+    <section class="price">
       <p class="actual_price">$149.99</p>
       <p class="price_before">$169.99</p>
-    </div>
-    <button class="btn">Add to Cart</button>
+    </section>
+    <button class="btn"><img src="images/icon-cart.svg" alt="shopp"/>Add to Cart</button>
   </main>
   
 <!--<div class="attribution">
