--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -24,25 +24,25 @@
   </style>
 </head>
 <body>
- 
-  <main>
-    <picture>
+   <section class="item">
+     <picture>
       <source media="(max-width: 700px)" srcset="images/image-product-mobile.jpg" alt="product-perfume">
       <img class="img" src="images/image-product-desktop.jpg" alt="product-perfume">
-    </picture>
-
-    <p class="name">perfume</p>
-    <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
-    <p class="descr">
-      A floral, solar and voluptuous interpretation composed by Olivier Polge,
-      Perfumer-Creator for the House of CHANEL.
-    </p>
-    <section class="price">
-      <p class="actual_price">$149.99</p>
-      <p class="price_before">$169.99</p>
-    </section>
-    <button class="btn"><img src="images/icon-cart.svg" alt="shopp"/>Add to Cart</button>
-  </main>
+      </picture>
+     <main>
+      <h1 class="name">perfume</h1>
+      <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
+      <p class="descr">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.
+        </p>
+        <section class="price">
+          <p class="actual_price">$149.99</p>
+          <p class="price_before">$169.99</p>
+        </section>
+        <button class="btn"><img src="images/icon-cart.svg" alt="shopp"/>Add to Cart</button>
+      </main>
+   </section>
   
 <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
