--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -17,11 +17,6 @@
 
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
    <section class="item">
@@ -32,7 +27,7 @@
      <main>
       <h1 class="name">perfume</h1>
       <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
-      <p class="descr">
+      <p class="description">
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.
         </p>
@@ -40,13 +35,12 @@
           <p class="actual_price">$149.99</p>
           <p class="price_before">$169.99</p>
         </section>
-        <button class="btn"><img src="images/icon-cart.svg" alt="shopp"/>Add to Cart</button>
+        <button class="btn"><img src="images/icon-cart.svg" alt="trolley"/>Add to Cart</button>
       </main>
    </section>
   
-<!--<div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>-->
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  </div>
 </body>
 </html>
