--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -19,10 +19,10 @@
 
 </head>
 <body>
-   <section class="item">
+   <div class="container">
      <picture>
-      <source media="(max-width: 700px)" srcset="images/image-product-mobile.jpg" alt="product-perfume">
-      <img class="img" src="images/image-product-desktop.jpg" alt="product-perfume">
+      <source class="img" media="(min-width: 700px)" srcset="images/image-product-desktop.jpg">
+      <img class="img" src="images/image-product-mobile.jpg" alt="product-perfume">
       </picture>
      <main>
       <h1 class="name">perfume</h1>
@@ -32,15 +32,15 @@
         Perfumer-Creator for the House of CHANEL.
         </p>
         <section class="price">
-          <p class="actual_price">$149.99</p>
-          <p class="price_before">$169.99</p>
+          <h2 class="actual_price">$149.99</h2>
+          <h2 class="price_before">$169.99</h2>
         </section>
         <button class="btn"><img src="images/icon-cart.svg" alt="trolley"/>Add to Cart</button>
       </main>
-   </section>
+   </div>
   
-<div class="attribution">
+<footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  </div>
+  </footer>
 </body>
 </html>
