--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
    <div class="container">
-     <picture>
+     <picture id="media">
       <source class="img" media="(min-width: 700px)" srcset="images/image-product-desktop.jpg">
       <img class="img" src="images/image-product-mobile.jpg" alt="product-perfume">
       </picture>
