--- a/nft-preview-card-component-main/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/index.html
@@ -5,29 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+  </style>
+  <link rel="stylesheet" href="style.css" type="text/css">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
+<main>
+    <a href="#"><img src="images/image-equilibrium.jpg" alt="Equilibrium"></a>
+    
+    <header><h2><a href="#">Equilibrium #3429</a></h2></header>
   
-  Creation of Jules Wyvern
+    <p class="dscr">Our Equilibrium collection promotes balance and calm.</p>
+    <section class="info">
+      <div class="price"> <p>0.041 ETH</p></div>
+      <div class="time-left"><p>3 days left</p></div>
+    </section>
+    <div class="avatar"> <p>Creation lorem of <a href="#">Jules Wyvern</a></p></div>
+</main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
