--- a/nft-preview-card-component-main/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <main>
-    <a href="#"><img src="images/image-equilibrium.jpg" alt="Equilibrium"></a>
+    <a href="#"><img class="img" src="images/image-equilibrium.jpg" alt="Equilibrium"></a>
     
     <header><h2><a href="#">Equilibrium #3429</a></h2></header>
   
@@ -24,7 +24,7 @@
       <div class="price"> <p>0.041 ETH</p></div>
       <div class="time-left"><p>3 days left</p></div>
     </section>
-    <div class="avatar"> <p>Creation lorem of <a href="#">Jules Wyvern</a></p></div>
+    <div class="avatar"><p> <img src="images/image-avatar.png" alt="avatar"> Creation of <a href="#">Jules Wyvern</a></p></div>
 </main>
 
   <footer class="attribution">
