--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -16,7 +16,11 @@
 <body>
 <main>
     <picture>
-      <a href="#"><img class="NFT-img" src="images/image-equilibrium.jpg" alt="Equilibrium"></a>
+      <a href="#">
+        <div class="HoverImage"><img class="NFT-img" src="images/image-equilibrium.jpg" alt="Equilibrium">
+          <div class="overlay"> <img class="icon" src="images/icon-view.svg" alt="icon"></div>
+        </div>
+      </a>
     </picture>
 
     <header>
@@ -26,11 +30,11 @@
     <p class="descr">Our Equilibrium collection promotes balance and calm.</p>
 
     <section class="info">
-      <div class="price"> 0.041 ETH</div>
-      <div class="time-left">3 days left</div>
+      <div class="price"> <p>0.041 ETH</p></div>
+      <div class="time-left"><p>3 days left</p></div>
     </section>
 
-    <section class="avatar"> <!--<img class="AvatarImg" src="images/image-avatar.png" alt="avatar">--> Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></section>
+    <section class="avatar"> <a href="#"><img class="Avatar-Img" src="images/image-avatar.png" alt="avatar"></a> <p>Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></p></section>
 </main>
 
   <footer class="attribution">
