--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -16,11 +16,9 @@
 <body>
 <main>
     <picture>
-      <a href="#">
         <div class="HoverImage"><img class="NFT-img" src="images/image-equilibrium.jpg" alt="Equilibrium">
-          <div class="overlay"> <img class="icon" src="images/icon-view.svg" alt="icon"></div>
+          <div class="overlay"> <a href="#" class="icon"><img  src="images/icon-view.svg" alt="icon"></a></div>
         </div>
-      </a>
     </picture>
 
     <header>
@@ -34,12 +32,12 @@
       <div class="time-left"><p>3 days left</p></div>
     </section>
 
-    <section class="avatar"> <a href="#"><img class="Avatar-Img" src="images/image-avatar.png" alt="avatar"></a> <p>Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></p></section>
+    <section class="avatar"> <a href="#"><img class="Avatar-Img" src="images/image-avatar.png" alt="profile"></a> <p>Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></p></section>
 </main>
 
-  <footer class="attribution">
+  <!-- <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </footer>
+  </footer> -->
 </body>
 </html>
