--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -16,8 +16,8 @@
 <body>
 <main>
     <picture>
-        <div class="HoverImage"><img class="NFT-img" src="images/image-equilibrium.jpg" alt="Equilibrium">
-          <div class="overlay"> <a href="#" class="icon"><img  src="images/icon-view.svg" alt="icon"></a></div>
+        <div class="ProductImage"><img class="NFT-img" src="images/image-equilibrium.jpg" alt="NFT product image">
+          <div class="overlay"> <a href="#" class="icon"><img  src="images/icon-view.svg" alt="eye icon"></a></div>
         </div>
     </picture>
 
