--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -26,16 +26,16 @@
     <p class="descr">Our Equilibrium collection promotes balance and calm.</p>
 
     <section class="info">
-      <div class="price"> <p>0.041 ETH</p></div>
-      <div class="time-left"><p>3 days left</p></div>
+      <div class="price"> <h4>0.041 ETH</h4></div>
+      <div class="time-left"><h4>3 days left</h4></div>
     </section>
 
-    <section class="avatar"> <a href="#"><img class="Avatar-Img" src="images/image-avatar.png" alt="profile"></a> <p>Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></p></section>
+    <section class="avatar"> <a href="#"><img class="Avatar-Img" src="images/image-avatar.png" alt="profile"></a> <h4>Creation of <a class="Nick-Name" href="#">Jules Wyvern</a></h4></section>
 </main>
 
-  <!-- <footer class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </footer> -->
+  </footer>
 </body>
 </html>
