--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -5,45 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 
-  <!-- Rating state start -->
+  <main>
+        <section class="before-submit">
+              <!--Rating state start-->
+          <div class="shape-img"><img src="images/icon-star.svg" alt="star"></div>
+          <h1>How did we do?</h1>
+          <p class="description">
+            Please let us know how we did with your support request. All feedback is appreciated
+            to help us improve our offering!
+          </p>
+          <div class="rating-box">
+            <input type="button" value="1" class="shape"></input>
+            <input type="button" value="2" class="shape"></input>
+            <input type="button" value="3" class="shape"></input>
+            <input type="button" value="4" class="shape"></input>
+            <input type="button" value="5" class="shape"></input>
+          </div>
+          <input type="submit" value="Submit" class="submit-btn"></input>
+            <!--Rating state end-->
+        </section>
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
+        <section class="after-submit display-none">
+          <img src="images/illustration-thank-you.svg" alt="image">
+            <!-- Thank you state start -->
+          <p class="points">
+            You selected <span id="rated-points"></span>
+              <!--Add rating here-->
+            out of 5
+          </p>
+          <h2>Thank you!</h2>
+          <p class="thanks">
+            We appreciate you taking the time to give a rating. If you ever need more support,
+            don’t hesitate to get in touch!
+          </p>
+            <!--Thank you state end-->
+        </section>
+  </main>
+  <!-- <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer> -->
+  <script type="text/javascript" src="js.js"></script> 
 </body>
 </html>
