--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -30,7 +30,7 @@
             <input type="button" value="4" class="shape"></input>
             <input type="button" value="5" class="shape"></input>
           </div>
-          <input type="submit" value="Submit" class="submit-btn"></input>
+          <input type="submit" value="Submit" class="submit-btn disable-remove"></input>
             <!--Rating state end-->
         </section>
 
