--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -30,14 +30,14 @@
             <input type="button" value="4" class="shape"></input>
             <input type="button" value="5" class="shape"></input>
           </div>
-          <input type="submit" value="Submit" class="submit-btn disable-remove"></input>
+          <input type="submit" value="Submit" class="submit-btn"></input>
             <!--Rating state end-->
         </section>
 
         <section class="after-submit display-none">
           <img src="images/illustration-thank-you.svg" alt="image">
             <!-- Thank you state start -->
-          <p class="points">
+          <p class="points-selected">
             You selected <span id="rated-points"></span>
               <!--Add rating here-->
             out of 5
@@ -50,10 +50,9 @@
             <!--Thank you state end-->
         </section>
   </main>
-  <!-- <footer>
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </footer> -->
+  <footer>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  </footer>
   <script type="text/javascript" src="js.js"></script> 
 </body>
 </html>
