--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -54,6 +54,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
   </footer>
   
-  <script type="text/javascript" src="js.js"></script> 
+  <script src="js.js"></script> 
 </body>
 </html>
