--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -24,36 +24,35 @@
 <body>
 
   <main>
-    <picture>
-      <source class="img" media="(min-width: 700px)" srcset="images/image-header-desktop.jpg">
-      <img class="img" src="images/image-header-mobile.jpg" alt="obraz">
-      <section class="color-overlay"></section>
-      <!-- rozne zdjecia, dla mobilnej i pulpitu. tak jak w 'product prewiev card'  -->
-    </picture>
-
-    <section class="content">
-      <h1>Get <span class="color-span">insights</span> that help your business grow.</h1>
-      <p class="descr">
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
-      </p>
+    <div id="element">
+      <section class="content">
+        <h1>Get <span class="header-color-span">insights</span> that help your business grow.</h1>
+        <p class="description">
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
       
-      <div class="info">
-       <div>
-         <h3>10k+</h3> <p>companies</p>
-       </div>
-       <div>
-         <h3>314</h3> <p>templates</p>
-       </div>
-       <div>
-         <h3>12M+</h3> <p>queries</p>
-         <!-- w html'u zapisac duzymi literami albo zmienic css'em-->
-       </div>
-      </div>
-    </section>
+        <div class="stats">
+         <div>
+           <h2>10k+</h2> <p>companies</p>
+         </div>
+         <div>
+           <h2>314</h2> <p>templates</p>
+         </div>
+         <div>
+           <h2>12M+</h2> <p>queries</p>
+         </div>
+        </div>
+      </section>
+      <picture class="main-img">
+        <source class="img" media="(min-width: 600px)" srcset="images/image-header-desktop.jpg">
+        <img class="img" src="images/image-header-mobile.jpg" alt="product-perfume">
+        <div class="color-overlay"></div>
+      </picture>
+    </div>
   </main>
 
-  <!-- <footer class="attribution" style="margin-block: 2rem; color: white;">
+  <!-- <footer class="attribution" style=" color: white;">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </footer> -->
