--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -46,7 +46,7 @@
       </section>
       <picture class="main-img">
         <source class="img" media="(min-width: 600px)" srcset="images/image-header-desktop.jpg">
-        <img class="img" src="images/image-header-mobile.jpg" alt="product-perfume">
+        <img class="img" src="images/image-header-mobile.jpg" alt="picture">
         <div class="color-overlay"></div>
       </picture>
       </div>
